Added a plain-text README file.

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-README.rst
+DRYlib for Python
+=================
+
+See <https://drylib.org/python.html> for documentation.
+
+Use <https://github.com/dryproject/drylib.py/issues> for bug reports.
